fixed z-index issues

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -311,6 +311,8 @@ footer small{
         grid-row: 1/2;
         padding: 0;
         padding-top: 10px;
+        position: relative;
+        z-index: -2;
         width: auto;
         height: auto;
     }
@@ -322,6 +324,7 @@ footer small{
         height: 200vh;
         display: none;
         background: rgba(14, 13, 13, 0.582);
+        z-index: -1;
     }
     .overlay.over{
         display: block;
